--- a/src/app/features/workers/other-qualifications/other-qualifications.component.html
+++ b/src/app/features/workers/other-qualifications/other-qualifications.component.html
@@ -7,7 +7,10 @@
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l">Training and qualifications</span>
-            <h1 class="govuk-fieldset__heading">Do they have any other qualifications?</h1>
+            <h1 class="govuk-fieldset__heading">
+              Do they have any other qualifications <br />
+              (not relevant to social care)?
+            </h1>
           </legend>
           <div class="govuk-radios">
             <div *ngFor="let answer of answersAvailable; let idx = index" class="govuk-radios__item">
@@ -17,10 +20,10 @@
                 id="otherQualification-{{ idx }}"
                 name="otherQualification"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="otherQualification-{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
