add tests for staff-details component

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -71,6 +71,7 @@
               {{ getFormErrorMessage('otherJobRole', 'maxlength') }}
             </span>
             <input
+              data-testid="other-job-role"
               class="govuk-input govuk-!-width-two-thirds"
               [formControlName]="'otherJobRole'"
               id="otherJobRole-conditional"
