--- a/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
+++ b/src/app/features/workers/contract-with-zero-hours/contract-with-zero-hours.component.html
@@ -42,5 +42,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
