--- a/src/app/features/workers/mandatory-details/mandatory-details.component.html
+++ b/src/app/features/workers/mandatory-details/mandatory-details.component.html
@@ -8,7 +8,12 @@
         </legend>
       </div>
     </div>
-    <app-basic-record data-testid="summary" [workplace]="workplace" [worker]="worker"></app-basic-record>
+    <app-basic-record
+      data-testid="summary"
+      [workplace]="workplace"
+      [worker]="worker"
+      [mandatoryDetailsPage]="true"
+    ></app-basic-record>
     <div class="govuk-!-margin-top-8">
       <button
         data-testid="add-details-button"
