--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -8,7 +8,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' basic record details'"
-        [link]="getRoutePath('staff-details')"
+        [link]="mandatoryDetailsPage ? getMandatoryDetailsRoute() : getRoutePath('staff-details')"
         [hasData]="true"
       ></app-summary-record-change>
     </dd>
