Add a break for header of other qualifications

--- a/src/app/features/workers/other-qualifications/other-qualifications.component.html
+++ b/src/app/features/workers/other-qualifications/other-qualifications.component.html
@@ -8,8 +8,8 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l">Training and qualifications</span>
             <h1 class="govuk-fieldset__heading">
-              Do they have any other qualifications <br />
-              (not relevant to social care)?
+              Do they have any other qualifications (not relevant <br />
+              to social care)?
             </h1>
           </legend>
           <div class="govuk-radios">
