changed error messages, added test for annual salary including pence

--- a/src/app/features/workers/salary/salary.component.html
+++ b/src/app/features/workers/salary/salary.component.html
@@ -99,6 +99,10 @@
                     <span class="govuk-visually-hidden">Error:</span>
                     <span [innerHTML]="getFormErrorMessage('annualRate', 'max')"></span>
                   </ng-container>
+                    <ng-container *ngIf="form.get('annualRate').hasError('pattern')">
+                      <span class="govuk-visually-hidden">Error:</span>
+                      <span [innerHTML]="getFormErrorMessage('annualRate', 'pattern')"></span>
+                    </ng-container>
                 </span>
                 <span class="govuk-input__currency">
                   <input
