add persistent error handling to the form, sort out navigation errors

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -115,7 +115,7 @@
       </fieldset>
     </div>
 
-    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="!editFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar-1"
@@ -126,7 +126,7 @@
     </div>
   </div>
   <app-submit-button
-    [return]="!insideFlow"
+    [return]="editFlow"
     [canExit]="canExit"
     [recordSummary]="false"
     [callToAction]="submitTitle"
