--- a/src/app/features/workers/social-care-qualification-level/social-care-qualification-level.component.html
+++ b/src/app/features/workers/social-care-qualification-level/social-care-qualification-level.component.html
@@ -6,21 +6,18 @@
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('qualification').invalid">
         <h1 class="govuk-label-wrapper">
           <span class="govuk-caption-l">Training and qualifications</span>
-          <label class="govuk-label govuk-label--xl govuk-!-margin-bottom-8" for="qualification">
+          <label class="govuk-label govuk-label--l govuk-!-margin-bottom-8" for="qualification">
             What is the highest level of their social care qualifications?
           </label>
         </h1>
         <app-details [title]="'Help with qualification levels'">
-          <p>You can find more information about qualification levels here:</p>
-          <p>
-            <a
-              target="_blank"
-              href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels"
-            >
-              https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels
-              <span class="govuk-visually-hidden">, (opens in a new window)</span>
-            </a>
-          </p>
+          <a
+            target="_blank"
+            href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels"
+          >
+            Find out more about qualification levels<span class="govuk-visually-hidden">, (opens in a new window)</span>
+          </a>
+          on the GOV.UK website.
         </app-details>
         <label class="govuk-label" for="qualification"> Qualification level </label>
         <span
