--- a/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
@@ -24,7 +24,7 @@
           <span *ngIf="submitted && form.invalid" id="workplace-error" class="govuk-error-message">
             <span class="govuk-visually-hidden">Error:</span> {{ getFormErrorMessage('workplace', 'required') }}
           </span>
-          <ng-container *ngIf="locationAddresses.length > 4; else radioButtonForm">
+          <ng-container *ngIf="locationAddresses?.length > 4; else radioButtonForm">
             <app-select-workplace-dropdown-form
               data-testid="dropdown-form"
               [submitted]="submitted"
