change title on staff details page when updating the details

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -6,7 +6,7 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l">Mandatory information</span>
-          <h1 class="govuk-fieldset__heading">{{ worker ? 'Edit' : 'Add' }} a staff record</h1>
+          <h1 class="govuk-fieldset__heading">{{ worker ? 'Update' : 'Add a' }} staff record</h1>
         </legend>
         <div
           class="govuk-form-group"
