--- a/src/app/features/workers/weekly-contracted-hours/weekly-contracted-hours.component.html
+++ b/src/app/features/workers/weekly-contracted-hours/weekly-contracted-hours.component.html
@@ -85,5 +85,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!nsideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
