--- a/src/app/features/workers/average-weekly-hours/average-weekly-hours.component.html
+++ b/src/app/features/workers/average-weekly-hours/average-weekly-hours.component.html
@@ -84,5 +84,5 @@
       </div>
     </div>
   </div>
-  <app-submit-button [return]="!nsideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
