--- a/src/app/features/workers/salary/salary.component.html
+++ b/src/app/features/workers/salary/salary.component.html
@@ -99,10 +99,10 @@
                     <span class="govuk-visually-hidden">Error:</span>
                     <span [innerHTML]="getFormErrorMessage('annualRate', 'max')"></span>
                   </ng-container>
-                    <ng-container *ngIf="form.get('annualRate').hasError('pattern')">
-                      <span class="govuk-visually-hidden">Error:</span>
-                      <span [innerHTML]="getFormErrorMessage('annualRate', 'pattern')"></span>
-                    </ng-container>
+                  <ng-container *ngIf="form.get('annualRate').hasError('pattern')">
+                    <span class="govuk-visually-hidden">Error:</span>
+                    <span [innerHTML]="getFormErrorMessage('annualRate', 'pattern')"></span>
+                  </ng-container>
                 </span>
                 <span class="govuk-input__currency">
                   <input
@@ -144,6 +144,6 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
-
+  <!-- <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button> -->
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
