--- a/src/app/features/workers/salary/salary.component.html
+++ b/src/app/features/workers/salary/salary.component.html
@@ -29,7 +29,7 @@
             >
               <div class="govuk-form-group">
                 <label class="govuk-label" for="hourlyRate"> Standard hourly rate </label>
-                <span id="hourlyRate-hint" class="govuk-hint"> For example 10.40 </span>
+                <span id="hourlyRate-hint" class="govuk-hint"> For example, 10.40 </span>
                 <span
                   *ngIf="submitted && form.get('hourlyRate').errors"
                   id="hourlyRate-error"
@@ -81,7 +81,7 @@
             >
               <div class="govuk-form-group">
                 <label class="govuk-label" for="annualRate"> Standard annual rate </label>
-                <span id="annualRate-hint" class="govuk-hint"> For example 30000 </span>
+                <span id="annualRate-hint" class="govuk-hint"> For example, 30000 </span>
                 <span
                   *ngIf="submitted && form.get('annualRate').errors"
                   id="annualRate-error"
@@ -143,7 +143,5 @@
       </div>
     </div>
   </div>
-
-  <!-- <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button> -->
   <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
