--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -2,7 +2,10 @@
   <div class="govuk-grid-row govuk-!-margin-bottom-0">
     <div class="govuk-grid-column-full">
       <div class="govuk-list--inline govuk-list govuk__flex govuk-!-margin-bottom-3 govuk__align-items-center">
-        <span class="govuk-caption-xl govuk-!-margin-right-3 govuk-!-margin-bottom-0">{{ worker.nameOrId }}</span>
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l" data-testid="section-heading">{{ worker.nameOrId }}</span>
+          <h1 class="govuk-fieldset__heading">Staff record</h1>
+        </legend>
         <p *ngIf="worker.longTermAbsence" class="govuk-tag govuk-tag--grey govuk-!-margin-bottom-0 asc-tag">
           Long-term absent
           <a
@@ -24,7 +27,6 @@
   </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
-      <h1 class="govuk-heading-l">Staff record</h1>
       <a
         *ngIf="canEditWorker && worker.completed"
         class="govuk-button govuk-button--link govuk-!-padding-left-0"
