--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -1,36 +1,6 @@
 <h2 class="govuk-heading-m">Personal details</h2>
 <dl class="govuk-summary-list asc-summarylist-border-top">
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">National Insurance number</dt>
-    <ng-container *ngIf="!worker.nationalInsuranceNumber; else hasNino">
-      <dd class="govuk-summary-list__value">-</dd>
-    </ng-container>
-    <ng-template #hasNino>
-      <dd class="govuk-summary-list__value">
-        <div class="govuk-!-display-inline-block govuk-!-width-one-third">
-          {{ ninoHidden ? '*********' : worker.nationalInsuranceNumber }}
-        </div>
-        <ng-container *ngIf="canViewNinoDob">
-          <div class="govuk-!-display-inline-block govuk-!-width-two-thirds">
-            <a class="govuk-link" href="#" (click)="toggleNinoHide($event)">
-              {{ ninoHidden ? 'Show' : 'Hide' }}
-            </a>
-          </div>
-        </ng-container>
-      </dd>
-    </ng-template>
-
-    <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
-      <app-summary-record-change
-        [explanationText]="' national insurance number'"
-        [link]="getRoutePath('national-insurance-number')"
-        [hasData]="!!worker.nationalInsuranceNumber"
-        (setReturnClicked)="this.setReturn()"
-      ></app-summary-record-change>
-    </dd>
-  </div>
-
-  <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Date of birth</dt>
     <dd class="govuk-summary-list__value govuk-list--inline">
       <app-summary-record-value
@@ -56,6 +26,36 @@
         [explanationText]="' date of birth'"
         [link]="getRoutePath('date-of-birth')"
         [hasData]="!!worker.dateOfBirth"
+        (setReturnClicked)="this.setReturn()"
+      ></app-summary-record-change>
+    </dd>
+  </div>
+
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">National Insurance number</dt>
+    <ng-container *ngIf="!worker.nationalInsuranceNumber; else hasNino">
+      <dd class="govuk-summary-list__value">-</dd>
+    </ng-container>
+    <ng-template #hasNino>
+      <dd class="govuk-summary-list__value">
+        <div class="govuk-!-display-inline-block govuk-!-width-one-third">
+          {{ ninoHidden ? '*********' : worker.nationalInsuranceNumber }}
+        </div>
+        <ng-container *ngIf="canViewNinoDob">
+          <div class="govuk-!-display-inline-block govuk-!-width-two-thirds">
+            <a class="govuk-link" href="#" (click)="toggleNinoHide($event)">
+              {{ ninoHidden ? 'Show' : 'Hide' }}
+            </a>
+          </div>
+        </ng-container>
+      </dd>
+    </ng-template>
+
+    <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
+      <app-summary-record-change
+        [explanationText]="' national insurance number'"
+        [link]="getRoutePath('national-insurance-number')"
+        [hasData]="!!worker.nationalInsuranceNumber"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
     </dd>
@@ -114,9 +114,24 @@
   </div>
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Ethnicity</dt>
+    <dt class="govuk-summary-list__key">Ethnic group</dt>
     <dd class="govuk-summary-list__value">
-      {{ worker.ethnicity?.ethnicity | closedEndedAnswer }}
+      {{ ethnicGroupData }}
+    </dd>
+    <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
+      <app-summary-record-change
+        [explanationText]="' ethnicity'"
+        [link]="getRoutePath('ethnicity')"
+        [hasData]="!!ethnicGroupData"
+        (setReturnClicked)="this.setReturn()"
+      ></app-summary-record-change>
+    </dd>
+  </div>
+
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">Ethnic background</dt>
+    <dd class="govuk-summary-list__value">
+      {{ ethnicityData }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
