--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -77,7 +77,7 @@
   </div>
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Gender</dt>
+    <dt class="govuk-summary-list__key">Gender identity</dt>
 
     <dd class="govuk-summary-list__value">
       <app-summary-record-value
@@ -197,6 +197,23 @@
         [explanationText]="' country of birth'"
         [link]="getRoutePath('country-of-birth')"
         [hasData]="!!worker.countryOfBirth"
+        (setReturnClicked)="this.setReturn()"
+      ></app-summary-record-change>
+    </dd>
+  </div>
+
+  <div class="govuk-summary-list__row" *ngIf="displayYearArrived">
+    <dt class="govuk-summary-list__key">Year arrived in the UK</dt>
+    <dd class="govuk-summary-list__value">
+      {{ worker.yearArrived?.year ? worker.yearArrived?.year : (worker.yearArrived?.value | openEndedAnswer) }}
+    </dd>
+    <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
+      <app-summary-record-change
+        [explanationText]="' year arrived in UK'"
+        [link]="getRoutePath('year-arrived-uk')"
+        [hasData]="
+          !(worker.yearArrived === null || (worker.yearArrived?.value === null && worker.yearArrived?.year === null))
+        "
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
     </dd>
