feat(staffRecordSummaryPageAmendments): FIxed broken tests, removed other jobs from summary and changed how some data is presented on summary

--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -32,6 +32,7 @@
         class="govuk-button govuk-button--link govuk-!-padding-left-0"
         role="button"
         draggable="false"
+        data-testid="training-and-qualifications-link"
         [routerLink]="['/workplace', workplace.uid, 'training-and-qualifications-record', worker.uid, 'training']"
       >
         Training and qualifications
