--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -2,7 +2,7 @@
 <dl class="govuk-summary-list asc-summarylist-border-top">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Date of birth</dt>
-    <dd class="govuk-summary-list__value govuk-list--inline">
+    <dd class="govuk-summary-list__value govuk-list--inline govuk-!-padding-left-8">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.dateOfBirth"
@@ -34,10 +34,10 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">National Insurance number</dt>
     <ng-container *ngIf="!worker.nationalInsuranceNumber; else hasNino">
-      <dd class="govuk-summary-list__value">-</dd>
+      <dd class="govuk-summary-list__value govuk-!-padding-left-8">-</dd>
     </ng-container>
     <ng-template #hasNino>
-      <dd class="govuk-summary-list__value">
+      <dd class="govuk-summary-list__value govuk-!-padding-left-8">
         <div class="govuk-!-display-inline-block govuk-!-width-one-third">
           {{ ninoHidden ? '*********' : worker.nationalInsuranceNumber }}
         </div>
@@ -63,7 +63,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Home postcode</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ worker.postcode || '-' }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -79,7 +79,7 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Gender identity</dt>
 
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.gender"
@@ -100,7 +100,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Disabled</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ showDisability || '-' | closedEndedAnswer }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -115,7 +115,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Ethnic group</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ ethnicGroupData }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -130,7 +130,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Ethnic background</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ ethnicityData }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -145,7 +145,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Nationality</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.nationality"
@@ -170,7 +170,7 @@
 
   <div class="govuk-summary-list__row" *ngIf="displayBritishCitizenship">
     <dt class="govuk-summary-list__key">British citizenship</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ worker.britishCitizenship | closedEndedAnswer }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -185,7 +185,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Country of birth</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{
         worker.countryOfBirth?.other?.country !== null
           ? worker.countryOfBirth?.other?.country
@@ -204,7 +204,7 @@
 
   <div class="govuk-summary-list__row" *ngIf="displayYearArrived">
     <dt class="govuk-summary-list__key">Year arrived in the UK</dt>
-    <dd class="govuk-summary-list__value">
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ worker.yearArrived?.year ? worker.yearArrived?.year : (worker.yearArrived?.value | openEndedAnswer) }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
