Changed banner message for saved staff record, added back link in staff record summary, adjusted tests, made a change in ethnicity component to allow a dash to be displayed when no option is selected

--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -116,7 +116,7 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Ethnic group</dt>
     <dd class="govuk-summary-list__value govuk-!-padding-left-8">
-      {{ ethnicGroupData }}
+      {{ ethnicGroupData || '-' }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
@@ -131,7 +131,7 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Ethnic background</dt>
     <dd class="govuk-summary-list__value govuk-!-padding-left-8">
-      {{ ethnicityData }}
+      {{ ethnicityData || '-' }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
