debugged some of the issues surrounding viewing notifications

--- a/src/app/features/notifications/notification-become-a-parent/notification-become-a-parent.component.html
+++ b/src/app/features/notifications/notification-become-a-parent/notification-become-a-parent.component.html
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
       <span class="govuk-caption-xl">{{ workplace?.name }}</span>
-      Notification
+      Notification {{notificationUid}}
     </h1>
   </div>
 </div>
