--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -126,11 +126,12 @@
     </div>
   </div>
   <app-submit-button
-    [return]="editFlow"
-    [canExit]="canExit"
-    [recordSummary]="false"
     [callToAction]="submitTitle"
+    [recordSummary]="false"
+    [canExit]="canExit"
+    [return]="!insideFlow && !inMandatoryDetailsFlow ? false : editFlow"
     [isExistingStaffRecord]="!!worker"
     (clicked)="setSubmitAction($event)"
-  ></app-submit-button>
+  >
+  </app-submit-button>
 </form>
