feat(staffRecordSummaryPageAmendments): Added save and cancel button functionality to submit buttons in submit-button component

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -126,6 +126,7 @@
     </div>
   </div>
   <app-submit-button
+    [showSaveAndCancelButton]="showSaveAndCancelButton"
     [callToAction]="submitTitle"
     [recordSummary]="false"
     [canExit]="canExit"
