--- a/src/app/features/workers/country-of-birth/country-of-birth.component.html
+++ b/src/app/features/workers/country-of-birth/country-of-birth.component.html
@@ -84,5 +84,9 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button
+    [showSaveAndCancelButton]="!insideFlow"
+    [return]="!insideFlow"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
 </form>
