--- a/src/app/features/workers/social-care-qualification/social-care-qualification.component.html
+++ b/src/app/features/workers/social-care-qualification/social-care-qualification.component.html
@@ -20,10 +20,10 @@
                 id="qualificationInSocialCare-{{ idx }}"
                 name="qualificationInSocialCare"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="qualificationInSocialCare-{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
@@ -41,5 +41,9 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button
+    [showSaveAndCancelButton]="!!return"
+    [return]="!!return"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
 </form>
