service capacity changes

--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -15,6 +15,7 @@
       <dd class="govuk-summary-list__value">
         <div>
           {{ workplace.name }}
+          {{ resp }}
         </div>
         <div *ngIf="workplace" class="govuk-!-padding-top-2">
           <div *ngIf="workplace.address1">{{ workplace.address1 }}</div>
