--- a/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
+++ b/src/app/features/workers/nursing-specialism/nursing-specialism.component.html
@@ -84,7 +84,7 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow && !registeredNurseFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar"
@@ -95,5 +95,8 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button
+    [return]="!insideFlow || registeredNurseFlow"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
 </form>
