feat(staffRecordSummaryPageAmendments): Fixed back links and cancel links for pages linked to country of birth

--- a/src/app/features/workers/year-arrived-uk/year-arrived-uk.component.html
+++ b/src/app/features/workers/year-arrived-uk/year-arrived-uk.component.html
@@ -77,7 +77,7 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow && !insideYearArrivedUkMiniFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar-1"
@@ -88,5 +88,8 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button
+    [return]="!insideFlow || insideYearArrivedUkMiniFlow"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
 </form>
