feat(staffRecordSummaryPageAmendments): Fixed back links and cancel links for pages linked to social care qualification

--- a/src/app/features/workers/social-care-qualification/social-care-qualification.component.html
+++ b/src/app/features/workers/social-care-qualification/social-care-qualification.component.html
@@ -42,8 +42,8 @@
   </div>
 
   <app-submit-button
-    [showSaveAndCancelButton]="!!return"
-    [return]="!!return"
+    [showSaveAndCancelButton]="!insideFlow"
+    [return]="!insideFlow"
     (clicked)="setSubmitAction($event)"
   ></app-submit-button>
 </form>
