--- a/src/app/features/workers/mental-health-professional/mental-health-professional.component.html
+++ b/src/app/features/workers/mental-health-professional/mental-health-professional.component.html
@@ -30,7 +30,7 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow && !insideMentalHealthProfessionalSummaryFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar-1"
@@ -41,5 +41,8 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button
+    [return]="!insideFlow || insideMentalHealthProfessionalSummaryFlow"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
 </form>
