--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="worker">
   <div class="govuk-grid-row govuk-!-margin-bottom-0">
     <div class="govuk-grid-column-full">
-      <div class="govuk-list--inline govuk-list govuk__flex govuk-!-margin-bottom-3 govuk__align-items-center">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <span class="govuk-caption-l" data-testid="section-heading">{{ worker.nameOrId }}</span>
-          <h1 class="govuk-fieldset__heading">Staff record</h1>
-        </legend>
-        <p *ngIf="worker.longTermAbsence" class="govuk-tag govuk-tag--grey govuk-!-margin-bottom-0 asc-tag">
+      <div class="govuk-list--inline govuk-list govuk-!-margin-bottom-0 govuk__flex govuk__align-items-center">
+        <span class="govuk-caption-l" data-testid="section-heading">{{ worker.nameOrId }}</span>
+        <p
+          *ngIf="worker.longTermAbsence"
+          class="govuk-!-margin-left-3 govuk-tag govuk-tag--grey govuk-!-margin-bottom-0 asc-tag"
+        >
           Long-term absent
           <a
             [routerLink]="[
@@ -27,6 +27,11 @@
   </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
+      <h1 class="govuk-heading-l">Staff record</h1>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
       <a
         *ngIf="canEditWorker && worker.completed"
         class="govuk-button govuk-button--link govuk-!-padding-left-0"
@@ -40,7 +45,7 @@
     </div>
 
     <div class="govuk-grid-column-two-thirds">
-      <div *ngIf="worker.completed" class="govuk-grid-row govuk-!-margin-bottom-3 govuk-!-margin-top-0">
+      <div *ngIf="worker.completed" class="govuk-grid-row govuk-!-margin-top-0">
         <div class="govuk-button-group govuk__align-items-center govuk-util__float-right govuk-!-margin-top-0">
           <a
             class="govuk-button govuk-button--link"
@@ -87,7 +92,7 @@
   </div>
   <div class="govuk-grid-row">
     <ng-container *ngIf="worker.completed; else button">
-      <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-3">
         <p>Check the record details you've added are correct.</p>
       </div>
     </ng-container>
