--- a/src/app/features/dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/dashboard/home-tab/home-tab.component.html
@@ -116,6 +116,9 @@
       <li class="govuk-!-margin-bottom-3">
         <a [routerLink]="['/first-login-wizard']">Help to get you started</a>
       </li>
+      <li class="govuk-!-margin-bottom-3">
+        <a [routerLink]="['/asc-wds-certificate']">Get your ASC-WDS certificate</a>
+      </li>
     </ul>
     <div *ngIf="canRunLocalAuthorityReport && workplace">
       <h3 class="govuk-heading-s govuk-!-margin-top-1">Download reports</h3>
