feat(staffRecordSummaryPageAmendments): Made fixes as a result of deskcheck

--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -1,27 +1,27 @@
 <ng-container *ngIf="worker">
   <div class="govuk-grid-row govuk-!-margin-bottom-0">
+    <p
+      *ngIf="worker.longTermAbsence"
+      class="govuk-!-margin-bottom-3 govuk-!-margin-left-3 govuk-tag govuk-tag--grey govuk-!-margin-bottom-0 asc-tag"
+    >
+      Long-term absent
+      <a
+        [routerLink]="[
+          '/workplace',
+          workplace.uid,
+          'training-and-qualifications-record',
+          worker.uid,
+          'long-term-absence'
+        ]"
+        data-testid="longTermAbsence"
+        class="govuk-link govuk-link--no-visited-state govuk-!-padding-left-1"
+        (click)="setReturnTo()"
+        >View</a
+      >
+    </p>
     <div class="govuk-grid-column-full">
-      <div class="govuk-list--inline govuk-list govuk-!-margin-bottom-0 govuk__flex govuk__align-items-center">
+      <div class="govuk-!-margin-bottom-0">
         <span class="govuk-caption-l" data-testid="section-heading">{{ worker.nameOrId }}</span>
-        <p
-          *ngIf="worker.longTermAbsence"
-          class="govuk-!-margin-left-3 govuk-tag govuk-tag--grey govuk-!-margin-bottom-0 asc-tag"
-        >
-          Long-term absent
-          <a
-            [routerLink]="[
-              '/workplace',
-              workplace.uid,
-              'training-and-qualifications-record',
-              worker.uid,
-              'long-term-absence'
-            ]"
-            data-testid="longTermAbsence"
-            class="govuk-link govuk-link--no-visited-state govuk-!-padding-left-1"
-            (click)="setReturnTo()"
-            >View</a
-          >
-        </p>
       </div>
     </div>
   </div>
@@ -29,21 +29,6 @@
     <div class="govuk-grid-column-one-third">
       <h1 class="govuk-heading-l">Staff record</h1>
     </div>
-  </div>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-third">
-      <a
-        *ngIf="canEditWorker && worker.completed"
-        class="govuk-button govuk-button--link govuk-!-padding-left-0"
-        role="button"
-        draggable="false"
-        data-testid="training-and-qualifications-link"
-        [routerLink]="['/workplace', workplace.uid, 'training-and-qualifications-record', worker.uid, 'training']"
-      >
-        Training and qualifications
-      </a>
-    </div>
-
     <div class="govuk-grid-column-two-thirds">
       <div *ngIf="worker.completed" class="govuk-grid-row govuk-!-margin-top-0">
         <div class="govuk-button-group govuk__align-items-center govuk-util__float-right govuk-!-margin-top-0">
@@ -88,6 +73,20 @@
           >
         </div>
       </div>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+      <a
+        *ngIf="canEditWorker && worker.completed"
+        class="govuk-button govuk-button--link govuk-!-padding-left-0"
+        role="button"
+        draggable="false"
+        data-testid="training-and-qualifications-link"
+        [routerLink]="['/workplace', workplace.uid, 'training-and-qualifications-record', worker.uid, 'training']"
+      >
+        Training and qualifications
+      </a>
     </div>
   </div>
   <div class="govuk-grid-row">
