--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -43,7 +43,7 @@
         class="govuk-list govuk-list--inline govuk-!-padding-left-0"
         role="button"
         draggable="false"
-        [routerLink]="['/workplace', workplace.uid, 'staff-record', worker.uid]"
+        [routerLink]="['/workplace', workplace.uid, 'staff-record', worker.uid, 'staff-record-summary']"
       >
         View staff record
       </a>
