--- a/src/app/shared/components/new-back-link/new-back-link.component.html
+++ b/src/app/shared/components/new-back-link/new-back-link.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="showBackLink">
-  <a href="#" (click)="goBack($event)" class="govuk-back-link">Back link</a>
+  <a href="#" (click)="goBack($event)" class="govuk-back-link">Back</a>
 </ng-container>
