--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -11,7 +11,11 @@
         authorities.
       </p>
 
-      *IMAGE GOES HERE*
+      <img
+        src="/public/download/Certificates/sample-image/asc-wds+certificate+sample+23-24.png"
+        width="300px"
+        style="border: 1px solid #b1b4b6"
+      />
       <a class="govuk__flex govuk__align-items-center" (click)="downloadCertificate()" target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
           >Download your certificate</span
@@ -29,7 +33,7 @@
       />
       <a
         class="govuk__flex govuk__align-items-center"
-        href="https://sfcstaging.cloudapps.digital/public/download/Certificates/Footer/ASC-WDS_Footer+{{ years }}.jpg"
+        href="public/download/Certificates/Footer/ASC-WDS_Footer+{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
           >Download your email signature</span
