--- a/src/app/features/workplace/services-capacity/services-capacity.component.html
+++ b/src/app/features/workplace/services-capacity/services-capacity.component.html
@@ -1,7 +1,7 @@
 <app-error-summary
   *ngIf="(submitted && form.invalid) || serverError"
   [form]="form"
-  [formErrorsMap]="formErrorsMap"
+  [formErrorsMap]="errorsSummaryErrorsMap"
   [serverError]="serverError"
 ></app-error-summary>
 
