change hierarchy of shown error messages in the error summary

--- a/src/app/features/workplace/services-capacity/services-capacity.component.html
+++ b/src/app/features/workplace/services-capacity/services-capacity.component.html
@@ -3,6 +3,7 @@
   [form]="form"
   [formErrorsMap]="errorsSummaryErrorsMap"
   [serverError]="serverError"
+  [reverseMessagesOrder]="true"
 ></app-error-summary>
 
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
