--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -1,18 +1,20 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-grid-row govuk-!-margin-bottom-8">
+    <div class="govuk-grid-row govuk-!-margin-bottom-4">
       <h1 class="govuk-heading-l">Get your ASC-WDS certificate</h1>
       <p>
         As an active ASC-WDS user, you should be proud that the data you share makes the adult social care sector better
         for everybody.
       </p>
+    </div>
+    <div class="govuk-grid-row govuk-!-margin-bottom-8" data-testid="certificateDownload">
       <p>
         This certificate recognises that you contribute information used by DHSC, the Care Quality Commission, and local
         authorities.
       </p>
 
       <img
-        src="/public/download/Certificates/sample-image/asc-wds+certificate+sample+23-24.png"
+        src="/public/download/certificates/sample-image/asc-wds+certificate+sample+23-24.png"
         width="300px"
         style="border: 1px solid #b1b4b6"
       />
@@ -22,38 +24,38 @@
         ></a
       >
     </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-8">
+    <div class="govuk-grid-row govuk-!-margin-bottom-8" data-testid="footerDownload">
       <h2 class="govuk-heading-s">ASC-WDS email signature</h2>
       <p>Our unique email signature can be used to let everyone know that you're helping to spread the message.</p>
 
       <img
-        src="public/download/Certificates/Footer/ASC-WDS_Footer+{{ years }}.jpg"
+        src="public/download/certificates/footer/ASC-WDS_Footer+{{ years }}.jpg"
         width="300px"
         style="border: 1px solid #b1b4b6"
       />
       <a
         class="govuk__flex govuk__align-items-center"
-        href="public/download/Certificates/Footer/ASC-WDS_Footer+{{ years }}.jpg"
+        href="public/download/certificates/footer/ASC-WDS_Footer+{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
           >Download your email signature</span
         ></a
       >
     </div>
-    <div class="govuk-grid-row govuk-!-margin-bottom-8">
+    <div class="govuk-grid-row govuk-!-margin-bottom-8" data-testId="logoDownload">
       <h2 class="govuk-heading-s">ASC-WDS logo</h2>
       <p>
         If you want something a bit smaller or something to use on your web pages, then we also have an ASC-WDS logo.
       </p>
 
       <img
-        src="public/download/Certificates/Logo/ASC-WDS+logo_20{{ years }}.jpg"
+        src="public/download/certificates/logo/ASC-WDS+logo_20{{ years }}.jpg"
         width="150px"
         style="border: 1px solid #b1b4b6"
       />
       <a
         class="govuk__flex govuk__align-items-center"
-        href="public/download/Certificates/Logo/ASC-WDS+logo_20{{ years }}.jpg"
+        href="public/download/certificates/logo/ASC-WDS+logo_20{{ years }}.jpg"
         target="_blank"
         ><img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1"
           >Download your logo</span
@@ -62,7 +64,7 @@
     </div>
 
     <div class="govuk-grid-row">
-      <a role="button" draggable="false" class="govuk-button"> Return to home </a>
+      <a role="button" draggable="false" class="govuk-button" [routerLink]="['/dashboard']" data-testid="returnButton"> Return to home </a>
     </div>
   </div>
 </div>
