Removed unnecessary logs, added alt text

--- a/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
+++ b/src/app/features/dashboard/asc-wds-certificate/asc-wds-certificate.component.html
@@ -14,6 +14,7 @@
       </p>
 
       <img
+        alt="An ASC-WDS certificate with sample data"
         src="/public/download/certificates/sample-image/asc-wds+certificate+sample+23-24.png"
         width="300px"
         style="border: 1px solid #b1b4b6"
@@ -29,6 +30,7 @@
       <p>Our unique email signature can be used to let everyone know that you're helping to spread the message.</p>
 
       <img
+        alt="An ASC-WDS email footer"
         src="public/download/certificates/footer/ASC-WDS_Footer+{{ years }}.jpg"
         width="300px"
         style="border: 1px solid #b1b4b6"
@@ -49,6 +51,7 @@
       </p>
 
       <img
+        alt="ASC-WDS logo"
         src="public/download/certificates/logo/ASC-WDS+logo_20{{ years }}.jpg"
         width="150px"
         style="border: 1px solid #b1b4b6"
@@ -64,7 +67,9 @@
     </div>
 
     <div class="govuk-grid-row">
-      <a role="button" draggable="false" class="govuk-button" [routerLink]="['/dashboard']" data-testid="returnButton"> Return to home </a>
+      <a role="button" draggable="false" class="govuk-button" [routerLink]="['/dashboard']" data-testid="returnButton">
+        Return to home
+      </a>
     </div>
   </div>
 </div>
