Add e2e test for create account component

--- a/src/app/features/registration/create-account/create-account.component.html
+++ b/src/app/features/registration/create-account/create-account.component.html
@@ -1,6 +1,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Create an Adult Social Care Workforce Data Set account</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-8" data-cy="account-heading">
+      Create an Adult Social Care Workforce Data Set account
+    </h1>
     <p>
       Adult social care providers and local authorities should use this service to create an Adult Social Care Workforce
       Data Set (ASC-WDS) account.
