--- a/src/app/features/create-account/workplace/regulated-by-cqc/regulated-by-cqc.component.html
+++ b/src/app/features/create-account/workplace/regulated-by-cqc/regulated-by-cqc.component.html
@@ -5,7 +5,7 @@
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading">
+          <h1 class="govuk-fieldset__heading" data-cy="cqc-heading">
             Is the main service you provide regulated by the Care Quality Commission?
           </h1>
         </legend>
@@ -15,7 +15,7 @@
             <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
           </p>
         </app-details>
-        <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
+        <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid" data-cy="cqc-error">
           <span *ngIf="submitted" id="regulated-error" class="govuk-error-message">
             <span *ngIf="this.form.get('regulatedByCQC').errors" data-testid="errorMessage" id="regulatedByCQC-error">{{
               getErrorMessage('regulatedByCQC')
@@ -50,7 +50,7 @@
         </div>
       </fieldset>
 
-      <button class="govuk-button" type="submit">Continue</button>
+      <button data-testid="continueButton" class="govuk-button" type="submit">Continue</button>
     </form>
   </div>
 </div>
