--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -98,7 +98,7 @@
     <ng-template #button>
       <div class="govuk-grid-column-full">
         <div class="govuk-button-group govuk__flex govuk__justify-content-space-between govuk-!-margin-top-0">
-          <p>Check the record details you've added before you confirm them.</p>
+          <p>Check these details before you confirm them.</p>
           <button type="button" class="govuk-button" (click)="saveAndComplete()">Confirm record details</button>
         </div>
       </div>
