Postcode: Changed error message, fixed HTML label, added a test for error message

--- a/src/app/features/workers/home-postcode/home-postcode.component.html
+++ b/src/app/features/workers/home-postcode/home-postcode.component.html
@@ -13,7 +13,7 @@
             What's their home postcode?
           </label>
         </h1>
-        <label class="govuk-label govuk-date-input__label" for="dob-year"> Postcode </label>
+        <label class="govuk-label govuk-date-input__label" for="postcode"> Postcode </label>
         <span class="govuk-caption-m govuk-!-margin-bottom-4">For example, 'LS1 2RP'</span>
         <span *ngIf="submitted && form.get('postcode').errors" id="postcode-error" class="govuk-error-message">
           <span class="govuk-visually-hidden">Error:</span>
