change the text of mandatory trianing from training panel

--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -3,7 +3,7 @@
     <a
       class="govuk-list govuk-list--inline govuk-!-margin-right-5"
       [routerLink]="['/workplace', workplace.uid, 'add-mandatory-training']"
-      >Manage mandatory training
+      >Add and manage mandatory training categories
     </a>
   </div>
   <div *ngIf="canEditEstablishment" class="govuk-grid-column-one-third">
