add error class to auto-suggest component input

--- a/src/app/features/workers/country-of-birth/country-of-birth.component.html
+++ b/src/app/features/workers/country-of-birth/country-of-birth.component.html
@@ -55,6 +55,7 @@
                       [formGroup]="form"
                       [dataProvider]="countryOfBirthNameFilter"
                       [formControlName]="'countryOfBirthName'"
+                      [error]="submitted && form.get('countryOfBirthName').invalid"
                     ></app-auto-suggest>
                   </div>
                 </div>
