--- a/src/app/features/workers/home-postcode/home-postcode.component.html
+++ b/src/app/features/workers/home-postcode/home-postcode.component.html
@@ -29,10 +29,10 @@
         />
       </div>
     </div>
-    <div class="govuk-grid-column-one-third-from-desktop">
+    <div class="govuk-grid-column-one-third-from-desktop" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
-          data-testid="progress-bar-1"
+          data-testid="progress-bar"
           [sections]="staffRecordSections"
           [currentSection]="'Personal details'"
         ></app-progress-bar>
@@ -40,5 +40,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
 </form>
