Changed width of select box in other-qualifications-level and social-care-qualifications-level to make them the same, changed select text in social-care-qualifications-level

--- a/src/app/features/workers/other-qualifications-level/other-qualifications-level.component.html
+++ b/src/app/features/workers/other-qualifications-level/other-qualifications-level.component.html
@@ -33,7 +33,7 @@
           {{ getFormErrorMessage('qualification', 'required') }}
         </span>
         <select
-          class="govuk-select govuk-!-width-two-thirds"
+          class="govuk-select govuk-!-width-one-half"
           [class.govuk-select--error]="submitted && form.get('qualification').invalid"
           [formControlName]="'qualification'"
           id="qualification"
